--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.1",
+    "sqlite3": "^4.0.6"
   }
 }
