--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": "https://github.com/JaroslawPokropinski/Mobilne-Projekt-Zespo-owy-Backend",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -14,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.1",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.2"
   }
 }
