--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "pg": "^7.10.0",
     "sequelize": "^5.8.1",
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
