--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
-    "pg": "^7.10.0",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.1",
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^3.2.9",
